--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-lg-12">
                 <span class="text-center logo">
-                    <h1>ЭРИЛОН</h1>
+                    <h1><h1>ЭРИЛОН</h1></h1>
                 </span>
                 </div>
             </div>
