--- a/public/views/trigger_skills/trigger_skill.html
+++ b/public/views/trigger_skills/trigger_skill.html
@@ -40,7 +40,7 @@
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
                 <a href="#" class="logo">
-                    <img src="/assets/common/img/logo.png"/>
+                    <h1>ЭРИЛОН</h1>
                 </a>
             </div>
             <div class="left-menu-inner scroll-pane">
