--- a/public/views/merits/merit.html
+++ b/public/views/merits/merit.html
@@ -125,7 +125,7 @@
                                     class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
-                                    class="dropdown-icon icmn-exit"></i> Сменить персонажа</a>
+                                    class="dropdown-icon icmn-exit"></i> Сменить профиль</a>
                             <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
                             <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"
                                ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i> Управление
