--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -114,12 +114,12 @@
                         <a style="cursor:pointer;" class="dropdown-toggle" data-toggle="dropdown"
                            aria-expanded="false">
                             <span class="user-name"><strong>{{player.name}}</strong></span>
-                            <span class="avatar" href="profile.html">
+                            <span class="avatar" href="#">
                         <img src="/assets/common/img/temp/avatars/4.jpg" alt="Avatar">
                     </span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                            <a class="dropdown-item" href="profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                            <a class="dropdown-item" href="#"><i class="dropdown-icon icmn-user"></i> Профиль</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
                                     class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
