--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -162,7 +162,7 @@
                     <div class="dropdown">
                         <a class="dropdown-toggle color-primary" href="" data-toggle="dropdown" aria-expanded="false"
                            ng-show="hideEditBlock">
-                            {{personage.name}}
+                            {{personage.name}}<span style="font-size: 12px"> (прокачка)</span>
                             <span class="ink animate"></span>
                         </a>
                         <div class="input-group" ng-hide="hideEditBlock">
