--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -233,8 +233,37 @@
                                         {{personageInherent.value}}
                                     </div>
                                 </td>
+                                <td>
+                                    <button class="btn btn-default-outline btn-rounded btn-sm"
+                                            ng-click="deletePersonageInherent(personageInherent.id)">
+                                        Удалить
+                                    </button>
+                                </td>
                             </tr>
                         </table>
+
+                        <form name="addPersonageInherentForm">
+                            <div class="form-group row">
+                                <label class="control-label col-sm-2" for="inherent_id">Особенность: </label>
+
+                                <div class="col-sm-5">
+                                    <select class="form-control"
+                                            ng-model="inherent_id" id="inherent_id"
+                                            ng-options="inherent.id as inherent.name for inherent in inherents">
+                                        <option style="display:none" value="">Выберите особенность...</option>
+                                    </select>
+                                </div>
+
+                                <div class="col-sm-3">
+                                    <input type="number" ng-model="personageInherentValue" class="form-control">
+                                </div>
+
+                                <div class="col-md-2">
+                                    <button class="btn" ng-click="addPersonageInherent()">Добавить</button>
+                                </div>
+
+                            </div>
+                        </form>
                     </div>
                     <div id="attr" class="tab-pane" role="tabpanel" style="display: none">
                         <div class="row">
